--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,12 +1,7 @@
 .footer {
-  background-color: gray;
+  background-color: lightblue;
   width: 100%;
-  height: 4em;
-  margin-top: 10.8em;
-}
-
-h5 {
-  padding-top: 0.9em;
-  padding-bottom: 0.2em;
-  padding-left: 1em;
+  box-shadow: 0 50vh 0 50vh lightblue;
+  text-align: center;
+  margin-top: 2em;
 }
